[gd_scene load_steps=9 format=2]

[ext_resource path="res://Reward.gd" type="Script" id=1]
[ext_resource path="res://Assets/fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/Golden_Key_Vector_Sign_generated.jpg" type="Texture" id=3]
[ext_resource path="res://Assets/New folder/PNG/match3/star_3.png" type="Texture" id=4]
[ext_resource path="res://Assets/more fonts/Sniglet-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/New folder/PNG/btn/next.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 1, 0.0392157, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 45
outline_size = 3
outline_color = Color( 0.117647, 0.0509804, 0.0509804, 1 )
font_data = ExtResource( 2 )

[node name="Reward" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}
Msg = "That,s Mean You Could"

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Header" type="Label" parent="ColorRect"]
margin_left = 170.752
margin_top = 217.1
margin_right = 1053.75
margin_bottom = 306.1
custom_colors/font_color = Color( 0.160784, 0.25098, 0.529412, 1 )
custom_fonts/font = SubResource( 1 )
text = "You Got The Key Of Level2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg" type="Label" parent="ColorRect"]
margin_left = 184.736
margin_top = 401.845
margin_right = 999.736
margin_bottom = 461.845
custom_colors/font_color = Color( 0.537255, 0.564706, 0.0745098, 1 )
custom_fonts/font = SubResource( 2 )
text = "That,s Mean You Could Be A Great Man"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Msg2" type="Label" parent="ColorRect"]
margin_left = 130.995
margin_top = 492.355
margin_right = 885.995
margin_bottom = 552.355
custom_colors/font_color = Color( 0.956863, 0.0823529, 0.184314, 1 )
custom_fonts/font = SubResource( 2 )
text = "You Did A Great JOb My Buddy!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="key" type="Label" parent="ColorRect"]
margin_left = 154.775
margin_top = 315.302
margin_right = 779.775
margin_bottom = 375.302
custom_colors/font_color = Color( 0.364706, 1, 0.611765, 1 )
custom_fonts/font = SubResource( 2 )
text = "You Got The Key Of Level2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextLevel" type="Button" parent="."]
margin_left = 877.832
margin_top = 23.811
margin_right = 1103.83
margin_bottom = 244.811
rect_scale = Vector2( 0.5, 0.5 )
custom_colors/font_color = Color( 0.282353, 0.0745098, 0.796078, 1 )
custom_colors/font_color_hover = Color( 0.054902, 0.0980392, 0.2, 1 )
icon = ExtResource( 6 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 479.999, 116 )
scale = Vector2( 2, 2 )
texture = ExtResource( 4 )

[node name="GoldenKey" type="Sprite" parent="."]
position = Vector2( 816.582, 342.274 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[connection signal="pressed" from="NextLevel" to="." method="_on_NextLevel_pressed"]
